View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026708 | Community | OCCT:Shape Healing | public | 2015-09-18 19:44 | 2016-04-20 15:52 |
Reporter | gka | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face. | ||||
Description | Attached shape remains invalid after performing ShapeFix_Shape due to method ShapeFix_Face::FixMissingSeam() does not add seam edge on the periodic face. | ||||
Steps To Reproduce | restore a_205.brep a fixshape r a 1.e-7 1 checkshape r f | ||||
Tags | No tags attached. | ||||
Test case number | bugs heal bug26708 | ||||
|
a_205.brep (1,454 bytes) |
|
Branch CR26708 has been created by gka. SHA-1: 50bd993132a9acf6016413da4988a9b20f2038cf Detailed log of new commits: Author: gka Date: Fri Sep 18 19:51:11 2015 +0300 0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face. Added taking into account tolerances of edges during splitting contour by line representing seam edge |
|
Branch CR26708 has been updated by gka. SHA-1: 818af5164f5779a87e2cb75afad7f486f2965b4d Detailed log of new commits: Author: gka Date: Wed Oct 14 11:45:33 2015 +0300 0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face. For case using ShapeFix_ComposeShell to insert seem edges on the periodic faces added analysis of the crossing seem in the process collecting wire. |
|
Could you please review branch CR26708 |
|
Branch CR26708_SP has been created by gka. SHA-1: ee4d02a8cb175f1a5a1e6d1027ed0453324c15cb Detailed log of new commits: Author: gka Date: Thu Nov 19 15:01:29 2015 +0300 0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face. Modification to take into account position of splitted edges relative to seam line. |
|
Branch CR26708_SP_2 has been created by gka. SHA-1: 5e00d20866d92a8e2b23b2a1b0aeed36ec45e187 Detailed log of new commits: Author: gka Date: Thu Nov 26 15:35:41 2015 +0300 0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face. Added taking into account crossing seam edge during collection of the wires in the ShapeFix_ComposeShell.cxx |
|
Branch CR26708_SP_2 has been updated by gka. SHA-1: b8799b814e09ceeac9498eb8249bf3ad59f7f8ea Detailed log of new commits: Author: gka Date: Thu Nov 26 15:53:08 2015 +0300 0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face. Modified test cases |
|
Branch CR26708_SP_2 is ready to be reviewed. |
|
Branch CR26708_1 has been created by gka. SHA-1: 14532a373497d4b08ff05462e9f3f75a4c24afef Detailed log of new commits: Author: gka Date: Wed Dec 9 11:00:13 2015 +0300 0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face. Added taking into account crossing seam edge during collection of the wires in the ShapeFix_ComposeShell.cxx |
|
Branch CR26708_1 has been updated by gka. SHA-1: 4ee6f1987a018ac59a97bc76a1fa2980c4958840 Detailed log of new commits: Author: gka Date: Wed Dec 9 11:28:11 2015 +0300 Test script for bug 0026708. Please note that used for test file a_205.brep should be renamed in the bug26708.brep |
|
Could you please review branch CR26708_1. Test script for check was added in the "bugs/heal bug26708" Please note that using for test file a_205.brep should be renamed in the bug26708.brep |
|
Reviewed, please test |
|
Dear BugMaster, Branch CR26708_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 4ee6f1987a018ac59a97bc76a1fa2980c4958840 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 134 (134 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: http://occt-tests/CR26708-1-master-occt-64/Windows-64-VC10/de/step_3/D8.html de step_3 D8: FAILED Testing cases: http://occt-tests/CR26708-1-master-occt-64/Debian70-64/bugs/heal/bug26708.html http://occt-tests/CR26708-1-master-occt-64/Windows-64-VC10/bugs/heal/bug26708.html bugs heal bug26708: OK Testing on Linux: occt component : Total MEMORY difference: 92630637 / 91552427 [+1.18%] Total CPU difference: 19721.059999999816 / 19763.109999999848 [-0.21%] products component : Total MEMORY difference: 26206940 / 26022482 [+0.71%] Total CPU difference: 7557.809999999993 / 7421.12000000001 [+1.84%] Testing on Windows: occt component : Total MEMORY difference: 55816839 / 55841661 [-0.04%] Total CPU difference: 18434.934571898808 / 18247.904972998756 [+1.02%] products component : Total MEMORY difference: 16503273 / 16515468 [-0.07%] Total CPU difference: 5776.935431399959 / 5665.6131177999705 [+1.96%] There are following differences in images found by testdiff. http://occt-tests/CR26708-1-master-occt-64/Debian70-64/diff-Debian70-64.html http://occt-tests/CR26708-1-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html IMAGE heal split_continuity_advanced ZE8: ZE8.png differs IMAGE heal surface_to_revolution_advanced ZE8: ZE8.png differs |
|
Branch CR26708_1 has been updated by mkv. SHA-1: 1a32420d2ed976241a68845d477735039c799e3a Detailed log of new commits: Author: mkv Date: Fri Dec 11 12:24:34 2015 +0300 Small correction of test case |
|
Dear gka, Branch CR26708_1 has been rejected due to: - regressions/differences/improvements - differences in images |
|
Dear mkv, Case de step_3 D8 is not regression. Differences in the images are not regressions too. |
|
Branch CR26708_1 has been updated by mkv. SHA-1: b91830b9da166ac9ea87a26038b13db29b09781a Detailed log of new commits: Author: mkv Date: Wed Dec 16 12:51:07 2015 +0300 Correction of test case de step_3 D8 for issue CR26708 |
|
Dear BugMaster, Branch CR6708_1 is TESTED. |
|
Branch CR26708_1 has been deleted by inv. SHA-1: b91830b9da166ac9ea87a26038b13db29b09781a |
|
Branch CR26708_SP_2 has been deleted by inv. SHA-1: b8799b814e09ceeac9498eb8249bf3ad59f7f8ea |
|
Branch CR26708_SP has been deleted by inv. SHA-1: ee4d02a8cb175f1a5a1e6d1027ed0453324c15cb |
|
Branch CR26708 has been deleted by inv. SHA-1: 818af5164f5779a87e2cb75afad7f486f2965b4d |
occt: master c9e1d810 2015-12-09 08:00:13 Committer: bugmaster Details Diff |
0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face. Added taking into account crossing seam edge during collection of the wires in the ShapeFix_ComposeShell.cxx Test script for bug 0026708. |
Affected Issues 0026708 |
|
mod - src/ShapeFix/ShapeFix_ComposeShell.cxx | Diff File | ||
add - tests/bugs/heal/bug26708 | Diff File | ||
mod - tests/de/step_3/D8 | Diff File | ||
mod - tests/de/step_4/H1 | Diff File | ||
mod - tests/de/step_5/A1 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-09-18 19:44 | gka | New Issue | |
2015-09-18 19:44 | gka | Assigned To | => gka |
2015-09-18 19:44 | gka | File Added: a_205.brep | |
2015-09-18 19:45 | gka | Status | new => assigned |
2015-09-18 19:45 | gka | Relationship added | related to 0025553 |
2015-09-18 19:51 | git | Note Added: 0045924 | |
2015-10-14 11:49 | git | Note Added: 0046725 | |
2015-10-14 11:51 | gka | Note Added: 0046726 | |
2015-10-14 11:51 | gka | Assigned To | gka => abv |
2015-10-14 11:51 | gka | Status | assigned => resolved |
2015-11-19 15:02 | git | Note Added: 0048381 | |
2015-11-26 15:36 | git | Note Added: 0048612 | |
2015-11-26 15:55 | git | Note Added: 0048613 | |
2015-11-26 17:25 | gka | Note Added: 0048615 | |
2015-12-09 11:00 | git | Note Added: 0048891 | |
2015-12-09 11:28 | git | Note Added: 0048892 | |
2015-12-09 11:33 | gka | Note Added: 0048893 | |
2015-12-09 19:03 | abv | Note Added: 0048920 | |
2015-12-09 19:03 | abv | Assigned To | abv => bugmaster |
2015-12-09 19:03 | abv | Status | resolved => reviewed |
2015-12-09 20:23 |
|
Assigned To | bugmaster => mkv |
2015-12-11 12:24 |
|
Note Added: 0049016 | |
2015-12-11 12:24 | git | Note Added: 0049017 | |
2015-12-11 12:25 |
|
Note Added: 0049018 | |
2015-12-11 12:25 |
|
Assigned To | mkv => gka |
2015-12-11 12:25 |
|
Status | reviewed => assigned |
2015-12-11 12:25 |
|
Test case number | => bugs heal bug26708 |
2015-12-15 17:20 | gka | Note Added: 0049171 | |
2015-12-15 17:20 | gka | Assigned To | gka => mkv |
2015-12-15 17:52 | gka | Status | assigned => feedback |
2015-12-16 12:51 | git | Note Added: 0049204 | |
2015-12-16 12:52 |
|
Note Added: 0049205 | |
2015-12-16 12:52 |
|
Assigned To | mkv => bugmaster |
2015-12-16 12:52 |
|
Status | feedback => tested |
2015-12-18 15:25 | bugmaster | Changeset attached | => occt master c9e1d810 |
2015-12-18 15:25 | bugmaster | Status | tested => verified |
2015-12-18 15:25 | bugmaster | Resolution | open => fixed |
2016-04-20 11:37 | git | Note Added: 0053391 | |
2016-04-20 11:38 | git | Note Added: 0053402 | |
2016-04-20 11:38 | git | Note Added: 0053404 | |
2016-04-20 11:39 | git | Note Added: 0053413 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:52 |
|
Status | verified => closed |