0026708: Fix shape did not fix attached shape. Seam edge was not added to the attached periodic face.

Added taking into account crossing seam edge during collection of the wires in the ShapeFix_ComposeShell.cxx
Test script for bug 0026708.